[package]
name = "FlightWand"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded"] }
ctrlc = "3.1.5"
log = "0.4.19"
openxr = "0.19.0"
evdev = "0.13.1"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
egui = "0.29.1"
eframe = "0.29.1"
nalgebra = "0.33.2"
nalgebra-glm = "0.19.0"