[package]
name = "FlightWand"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded"] }
log = "0.4.19"
openxr = "0.19.0"
evdev = "0.13.1"
egui = "0.29.1"
eframe = "0.29.1"
nalgebra = "0.33.2"
nalgebra-glm = "0.19.0"
profiling = { version = "1.0.16", features = ["profile-with-tracy"]  }